refactor: add text and borders

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>vc</title>
 </head>
 <body>
-    
+    <header class="header">Lorem ipsum dolor sit amet consectetur adipisicing elit</header>
+    <main class="main">Lorem ipsum dolor sit amet consectetur adipisicing elit</main>
+    <footer class="footer">Lorem ipsum dolor sit amet consectetur adipisicing elit</footer>
 </body>
 </html>
