refactor: add nav links

--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
 </head>
 <body>
     <header class="header">
+        <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+              <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+              <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+            </ul>
+        </nav>
         <div class="container">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </div>
