--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <header class="header">
         <nav class="nav">
             <ul class="nav-list">
-              <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-              <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-              <li class="nav-item"><a href="#english" class="nav-link">English</a></li>
+              <li class="nav-item"><a href="#contacts" class="nav-link">contacts</a></li>
+              <li class="nav-item"><a href="#summary" class="nav-link">summary</a></li>
+              <li class="nav-item"><a href="#english" class="nav-link">english</a></li>
             </ul>
         </nav>
         <div class="container">
@@ -22,7 +22,13 @@
         </div>
     </header>
     <main class="main">
-        <div class="container">
+        <div class="container" id="contacts">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+        </div>
+        <div class="container" id="summary">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+        </div>
+        <div class="container" id="english">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </div>
     </main>
