refactor: remove div class container, add sections

--- a/index.html
+++ b/index.html
@@ -10,23 +10,22 @@
 </head>
 <body>
     <header class="header">
-        <nav class="nav">
-            <ul class="nav-list">
-              <li class="nav-item"><a href="#contacts" class="nav-link">contacts</a></li>
-              <li class="nav-item"><a href="#summary" class="nav-link">summary</a></li>
-              <li class="nav-item"><a href="#english" class="nav-link">english</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#contacts" class="nav-link">contacts</a></li>
+                    <li class="nav-item"><a href="#summary" class="nav-link">summary</a></li>
+                    <li class="nav-item"><a href="#english" class="nav-link">english</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
     <main class="main">
-        <div class="container" id="contacts">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
-        </div>
-        <div class="container" id="summary">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
-        </div>
-        <div class="container" id="english">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+        <div class="container">
+            <section class="profile"></section>
+            <section class="contacts" id="contacts"></section>
+            <section class="summary" id="summary"></section>
+            <section class="english" id="english"></section>
         </div>
     </main>
     <footer class="footer">
