refactor: add sections, titles and text

--- a/index.html
+++ b/index.html
@@ -22,10 +22,20 @@
     </header>
     <main class="main">
         <div class="container">
-            <section class="profile"></section>
-            <section class="contacts" id="contacts"></section>
-            <section class="summary" id="summary"></section>
-            <section class="english" id="english"></section>
+            <section class="profile" id="profile">
+                <h1 class="section-title">ivan lebedev</h1>
+            </section>
+            <section class="contacts" id="contacts">
+                <h2 class="section-title">contacts</h2>
+            </section>
+            <section class="summary" id="summary">
+                <h2 class="section-title">summaru</h2>
+                <p>Born in Moscow, graduated at MSUH M.A. Sholohova (former Open Pedagogical University) in Moscow, than confirmed a dissertation to Candidate of Philological siences. Worked as serviceman in repair service (fridges, washing machines). Than go to own service, made websites (on WP) and promoted them. Worked in HVAC, especialy with heatpumps for country houses.</p>
+                <p>Wants to become a JS Developer. Currently based in Kazakhstan, Astana.</p>
+            </section>
+            <section class="english" id="english">
+                <h2 class="section-title"></h2>
+            </section>
         </div>
     </main>
     <footer class="footer">
