refactor: add text and list

--- a/index.html
+++ b/index.html
@@ -21,20 +21,37 @@
         </div>
     </header>
     <main class="main">
-        <div class="container">
-            <section class="profile" id="profile">
-                <h1 class="section-title">ivan lebedev</h1>
+        <div class="container main-container">
+            <section class="profile" id="profile-title">
+                <h1 class="section-title">Ivan Lebedev</h1>
             </section>
-            <section class="contacts" id="contacts">
-                <h2 class="section-title">contacts</h2>
+            <section class="profile" id="profile-text">
+                <p><img src="assets/img/my-photo.jpg" alt="My photo" width="200px"></p>
             </section>
-            <section class="summary" id="summary">
-                <h2 class="section-title">summaru</h2>
+            <section class="contacts" id="contacts-title">
+                <h2 class="section-title">Contacts</h2>
+            </section>
+            <section class="contacts" id="contacts-text">
+                <ul class="contacts-list">
+                    <li class="contacts-item">Phone: +77471094912</li>
+                    <li class="contacts-item">Mail: ivlebedev1@yandex.ru</li>
+                    <li class="contacts-item">Github: @ivan5576</li>
+                    <li class="contacts-item">Telegram: @ivan5576</li>
+                    <li class="contacts-item">Discord: @ivan5576</li>
+                </ul>
+            </section>
+            <section class="summary" id="summary-title">
+                <h2 class="section-title">Summaru</h2>
+            </section>
+            <section class="summary" id="summary-text">
                 <p>Born in Moscow, graduated at MSUH M.A. Sholohova (former Open Pedagogical University) in Moscow, than confirmed a dissertation to Candidate of Philological siences. Worked as serviceman in repair service (fridges, washing machines). Than go to own service, made websites (on WP) and promoted them. Worked in HVAC, especialy with heatpumps for country houses.</p>
                 <p>Wants to become a JS Developer. Currently based in Kazakhstan, Astana.</p>
             </section>
-            <section class="english" id="english">
-                <h2 class="section-title"></h2>
+            <section class="english" id="english-title">
+                <h2 class="section-title">English level</h2>
+            </section>
+            <section class="english" id="english-text">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quaerat ex omnis, ipsum libero maiores sint expedita facere nihil necessitatibus soluta doloribus perspiciatis autem nemo recusandae deserunt neque quos tempore.</p>
             </section>
         </div>
     </main>
