refactor: edit classes

--- a/index.html
+++ b/index.html
@@ -10,28 +10,29 @@
 </head>
 <body>
     <header class="header">
-        <div class="container">
+        <div class="container head-container">
             <nav class="nav">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#contacts" class="nav-link">contacts</a></li>
-                    <li class="nav-item"><a href="#summary" class="nav-link">summary</a></li>
-                    <li class="nav-item"><a href="#english" class="nav-link">english</a></li>
+                    <li class="nav-item"><a href="#contacts-title" class="nav-link">contacts</a></li>
+                    <li class="nav-item"><a href="#summary-title" class="nav-link">summary</a></li>
+                    <li class="nav-item"><a href="#english-title" class="nav-link">english</a></li>
                 </ul>
             </nav>
         </div>
     </header>
     <main class="main">
         <div class="container main-container">
-            <section class="profile" id="profile-title">
-                <h1 class="section-title">Ivan Lebedev</h1>
+            <section class="profile" id="profile">
+                <img src="assets/img/my-photo.jpg" alt="My photo" width="150px" class="my-photo">
             </section>
-            <section class="profile" id="profile-text">
-                <p><img src="assets/img/my-photo.jpg" alt="My photo" width="200px"></p>
+            <section class="profile-title" id="profile-title">
+                    <h1 class="section-title">Ivan Lebedev</h1>
+                    <h3 class="section-subtitle">Graduate to Junior Front-End Developer</h3>
             </section>
-            <section class="contacts" id="contacts-title">
+            <section class="contacts-title" id="contacts-title">
                 <h2 class="section-title">Contacts</h2>
             </section>
-            <section class="contacts" id="contacts-text">
+            <section class="contacts-list" id="contacts-list">
                 <ul class="contacts-list">
                     <li class="contacts-item">Phone: +77471094912</li>
                     <li class="contacts-item">Mail: ivlebedev1@yandex.ru</li>
@@ -40,23 +41,23 @@
                     <li class="contacts-item">Discord: @ivan5576</li>
                 </ul>
             </section>
-            <section class="summary" id="summary-title">
+            <section class="summary-title" id="summary-title">
                 <h2 class="section-title">Summaru</h2>
-            </section>
-            <section class="summary" id="summary-text">
+                </section>
+                <section class="summary-text" id="summary-text">
                 <p>Born in Moscow, graduated at MSUH M.A. Sholohova (former Open Pedagogical University) in Moscow, than confirmed a dissertation to Candidate of Philological siences. Worked as serviceman in repair service (fridges, washing machines). Than go to own service, made websites (on WP) and promoted them. Worked in HVAC, especialy with heatpumps for country houses.</p>
                 <p>Wants to become a JS Developer. Currently based in Kazakhstan, Astana.</p>
             </section>
-            <section class="english" id="english-title">
+            <section class="english-title" id="english-title">
                 <h2 class="section-title">English level</h2>
-            </section>
-            <section class="english" id="english-text">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, quaerat ex omnis, ipsum libero maiores sint expedita facere nihil necessitatibus soluta doloribus perspiciatis autem nemo recusandae deserunt neque quos tempore.</p>
+                </section>
+                <section class="english-text" id="english-text">
+                <p>B1 - Pre-Intermediate</p>
             </section>
         </div>
     </main>
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
         </div>
     </footer>
