refactor: add styles and footer text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </main>
     <footer class="footer">
         <div class="container footer-container">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+            <div>2022 <a href="https://github.com/ivan5576/" class="github-link">ivan5576</a></div>
         </div>
     </footer>
 </body>
