--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
     </main>
     <footer class="footer">
         <div class="container footer-container">
-            <div>2022 <a href="https://github.com/ivan5576/" class="github-link">ivan5576</a></div>
+            <div class="div-footer-rsschool"><a href="https://rs.school/js-stage0/"><img src="./assets/svg/rs_school_js.svg" alt="RS School" width="80px"></a></div>
+            <div class="div-footer-autor">2022 <a href="https://github.com/ivan5576/" class="github-link">ivan5576</a></div>
         </div>
     </footer>
 </body>
