--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
             </section>
             <section class="contacts-list" id="contacts-list">
                 <ul class="contacts-list">
-                    <li class="contacts-item">Phone: +77471094912</li>
-                    <li class="contacts-item">Mail: ivlebedev1@yandex.ru</li>
-                    <li class="contacts-item">Github: @ivan5576</li>
-                    <li class="contacts-item">Telegram: @ivan5576</li>
-                    <li class="contacts-item">Discord: @ivan5576</li>
+                    <a class="contacts-item"><span class="span-contacts">Phone:</span> <a href="tel:+77471094912" class="contact-link">+77471094912</a></li>
+                    <li class="contacts-item"><span class="span-contacts">Mail:</span> <a href="mail:ivlebedev1@yandex.ru" class="contact-link">ivlebedev1@yandex.ru</a></li>
+                    <li class="contacts-item"><span class="span-contacts">Github:</span> <a href="https://github.com/ivan5576" class="contact-link">@ivan5576</a></li>
+                    <li class="contacts-item"><span class="span-contacts">Telegram:</span> <a href="https://t.me/Ivan5576" class="contact-link">@ivan5576</a></li>
+                    <li class="contacts-item"><span class="span-contacts">Discord:</span> Ivan557655#2414</li>
                 </ul>
             </section>
             <section class="summary-title" id="summary-title">
@@ -47,6 +47,16 @@
                 <section class="summary-text" id="summary-text">
                 <p>Born in Moscow, graduated at MSUH M.A. Sholohova (former Open Pedagogical University) in Moscow, than confirmed a dissertation to Candidate of Philological siences. Worked as serviceman in repair service (fridges, washing machines). Than go to own service, made websites (on WP) and promoted them. Worked in HVAC, especialy with heatpumps for country houses.</p>
                 <p>Wants to become a JS Developer. Currently based in Kazakhstan, Astana.</p>
+            </section>
+            <section class="courses-title" id="courses-title">
+                <h2 class="section-title">Courses</h2>
+            </section>
+            <section class="courses-text" id="courses-text">
+                <ul class="courses-list">
+                    <li class="courses-item">RS School JavaScript/Front-end. Stage 0</li>
+                    <li class="courses-item">Hexlet CSS: Free Online Learning for Beginners</li>
+                    <li class="courses-item">Hexlet HTML: Perfect for Beginners</li>
+                </ul>
             </section>
             <section class="english-title" id="english-title">
                 <h2 class="section-title">English level</h2>
