refactor: correction of syntax

--- a/index.html
+++ b/index.html
@@ -22,53 +22,53 @@
     </header>
     <main class="main">
         <div class="container main-container">
-            <section class="profile" id="profile">
-                <img src="assets/img/my-photo.jpg" alt="My photo" width="150px" class="my-photo">
-            </section>
-            <section class="profile-title" id="profile-title">
+            <div class="profile">
+                <img src="assets/img/my-photo.jpg" class="profile-img" alt="My photo" width="150">
+            </div>
+            <section class="profile-title">
                     <h1 class="section-title">Ivan Lebedev</h1>
                     <h3 class="section-subtitle">Graduate to Junior Front-End Developer</h3>
             </section>
-            <section class="contacts-title" id="contacts-title">
+            <section class="contacts-title">
                 <h2 class="section-title">Contacts</h2>
             </section>
-            <section class="contacts-list" id="contacts-list">
+            <section class="contacts-list">
                 <ul class="contacts-list">
-                    <a class="contacts-item"><span class="span-contacts">Phone:</span> <a href="tel:+77471094912" class="contact-link">+77471094912</a></li>
+                    <li class="contacts-item"><span class="span-contacts">Phone:</span> <a href="tel:+77471094912" class="contact-link">+77471094912</a></li>
                     <li class="contacts-item"><span class="span-contacts">Mail:</span> <a href="mail:ivlebedev1@yandex.ru" class="contact-link">ivlebedev1@yandex.ru</a></li>
                     <li class="contacts-item"><span class="span-contacts">Github:</span> <a href="https://github.com/ivan5576" class="contact-link">@ivan5576</a></li>
                     <li class="contacts-item"><span class="span-contacts">Telegram:</span> <a href="https://t.me/Ivan5576" class="contact-link">@ivan5576</a></li>
                     <li class="contacts-item"><span class="span-contacts">Discord:</span> Ivan557655#2414</li>
                 </ul>
             </section>
-            <section class="summary-title" id="summary-title">
+            <section class="summary-title">
                 <h2 class="section-title">Summaru</h2>
                 </section>
-                <section class="summary-text" id="summary-text">
+                <section class="summary-text">
                 <p>Born in Moscow, graduated at MSUH M.A. Sholohova (former Open Pedagogical University) in Moscow, than confirmed a dissertation to Candidate of Philological siences. Worked as serviceman in repair service (fridges, washing machines). Than go to own service, made websites (on WP) and promoted them. Worked in HVAC, especialy with heatpumps for country houses.</p>
                 <p>Wants to become a JS Developer. Currently based in Kazakhstan, Astana.</p>
             </section>
-            <section class="courses-title" id="courses-title">
+            <section class="courses-title">
                 <h2 class="section-title">Courses</h2>
             </section>
-            <section class="courses-text" id="courses-text">
+            <section class="courses-text">
                 <ul class="courses-list">
                     <li class="courses-item">RS School JavaScript/Front-end. Stage 0</li>
                     <li class="courses-item">Hexlet CSS: Free Online Learning for Beginners</li>
                     <li class="courses-item">Hexlet HTML: Perfect for Beginners</li>
                 </ul>
             </section>
-            <section class="english-title" id="english-title">
+            <section class="english-title">
                 <h2 class="section-title">English level</h2>
                 </section>
-                <section class="english-text" id="english-text">
+                <section class="english-text">
                 <p>B1 - Pre-Intermediate</p>
             </section>
         </div>
     </main>
     <footer class="footer">
         <div class="container footer-container">
-            <div class="div-footer-rsschool"><a href="https://rs.school/js-stage0/"><img src="./assets/svg/rs_school_js.svg" alt="RS School" width="80px"></a></div>
+            <div class="div-footer-rsschool"><a href="https://rs.school/js-stage0/"><img src="./assets/svg/rs_school_js.svg" alt="RS School" width="80"></a></div>
             <div class="div-footer-autor">2022 <a href="https://github.com/ivan5576/" class="github-link">ivan5576</a></div>
         </div>
     </footer>
