refactor: change html layout from section to div

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#contacts-title" class="nav-link">contacts</a></li>
                     <li class="nav-item"><a href="#summary-title" class="nav-link">summary</a></li>
+                    <li class="nav-item"><a href="#courses-title" class="nav-link">courses</a></li>
+                    <li class="nav-item"><a href="#skills-title" class="nav-link">skills</a></li>
                     <li class="nav-item"><a href="#english-title" class="nav-link">english</a></li>
                 </ul>
             </nav>
@@ -23,16 +25,16 @@
     <main class="main">
         <div class="container main-container">
             <div class="profile">
-                <img src="assets/img/my-photo.jpg" class="profile-img" alt="My photo" width="150">
+                <img src="./assets/img/my-photo.jpg" class="profile-img" alt="My photo" width="150">
             </div>
-            <section class="profile-title">
-                    <h1 class="section-title">Ivan Lebedev</h1>
-                    <h3 class="section-subtitle">Graduate to Junior Front-End Developer</h3>
+            <section class="profile profile-title">
+                    <h1 class="div-title">Ivan Lebedev</h1>
+                    <h3 class="div-subtitle">Graduate to Junior Front-End Developer</h3>
             </section>
-            <section class="contacts-title">
-                <h2 class="section-title">Contacts</h2>
-            </section>
-            <section class="contacts-list">
+            <div class="contacts contacts-title" id="contacts-title">
+                <h2 class="div-title">Contacts</h2>
+            </div>
+            <div class="contacts contacts-list">
                 <ul class="contacts-list">
                     <li class="contacts-item"><span class="span-contacts">Phone:</span> <a href="tel:+77471094912" class="contact-link">+77471094912</a></li>
                     <li class="contacts-item"><span class="span-contacts">Mail:</span> <a href="mail:ivlebedev1@yandex.ru" class="contact-link">ivlebedev1@yandex.ru</a></li>
@@ -40,30 +42,40 @@
                     <li class="contacts-item"><span class="span-contacts">Telegram:</span> <a href="https://t.me/Ivan5576" class="contact-link">@ivan5576</a></li>
                     <li class="contacts-item"><span class="span-contacts">Discord:</span> Ivan557655#2414</li>
                 </ul>
-            </section>
-            <section class="summary-title">
-                <h2 class="section-title">Summaru</h2>
-                </section>
-                <section class="summary-text">
+            </div>
+            <div class="summary summary-title" id="summary-title">
+                <h2 class="div-title">Summaru</h2>
+                </div>
+                <div class="summary summary-text">
                 <p>Born in Moscow, graduated at MSUH M.A. Sholohova (former Open Pedagogical University) in Moscow, than confirmed a dissertation to Candidate of Philological siences. Worked as serviceman in repair service (fridges, washing machines). Than go to own service, made websites (on WP) and promoted them. Worked in HVAC, especialy with heatpumps for country houses.</p>
                 <p>Wants to become a JS Developer. Currently based in Kazakhstan, Astana.</p>
-            </section>
-            <section class="courses-title">
-                <h2 class="section-title">Courses</h2>
-            </section>
-            <section class="courses-text">
+            </div>
+            <div class="courses courses-title" id="courses-title">
+                <h2 class="div-title">Courses</h2>
+            </div>
+            <div class="courses courses-text">
                 <ul class="courses-list">
                     <li class="courses-item">RS School JavaScript/Front-end. Stage 0</li>
                     <li class="courses-item">Hexlet CSS: Free Online Learning for Beginners</li>
                     <li class="courses-item">Hexlet HTML: Perfect for Beginners</li>
                 </ul>
-            </section>
-            <section class="english-title">
-                <h2 class="section-title">English level</h2>
-                </section>
-                <section class="english-text">
+            </div>
+            <div class="skills skills-title" id="skills-title">
+                <h2 class="div-title">Skills</h2>
+            </div>
+            <div class="skills skills-text">
+                <ul class="skills-list">
+                    <li class="skills-item">Adobe Photoshop</li>
+                    <li class="skills-item"><span class="span-skills">Web-development:</span> HTML5, CSS3, JS</li>
+                    <li class="skills-item"><span class="span-skills">Version control:</span> Git, Github</li>
+                </ul>
+            </div>
+            <div class="english english-title" id="english-title">
+                <h2 class="div-title">English level</h2>
+                </div>
+                <div class="english english-text">
                 <p>B1 - Pre-Intermediate</p>
-            </section>
+            </div>
         </div>
     </main>
     <footer class="footer">
