--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=1024px, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./assets/favicon.ico">
     <title>vc</title>
@@ -44,7 +44,7 @@
                 </ul>
             </div>
             <div class="summary summary-title" id="summary-title">
-                <h2 class="div-title">Summaru</h2>
+                <h2 class="div-title">Summary</h2>
                 </div>
                 <div class="summary summary-text">
                 <p>Born in Moscow, graduated at MSUH M.A. Sholohova (former Open Pedagogical University) in Moscow, than confirmed a dissertation to Candidate of Philological siences. Worked as serviceman in repair service (fridges, washing machines). Than go to own service, made websites (on WP) and promoted them. Worked in HVAC, especialy with heatpumps for country houses.</p>
