refactor: actualize data

--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
                 <h2 class="div-title">English level</h2>
             </div>
             <div class="english english-text">
-                <p>B1 - Pre-Intermediate</p>
+                <p>B1-B2 Intermediate</p>
             </div>
         </div>
     </main>
     <footer class="footer">
         <div class="container footer-container">
             <div class="div-footer-rsschool"><a href="https://rs.school/js-stage0/"><img src="./assets/svg/rs_school_js.svg" alt="RS School" width="80"></a></div>
-            <div class="div-footer-autor">2022 <a href="https://github.com/ivan5576/" class="github-link">ivan5576</a></div>
+            <div class="div-footer-autor">2023 <a href="https://github.com/ivan5576/" class="github-link">ivan5576</a></div>
         </div>
     </footer>
 </body>
