--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./assets/favicon.ico">
     <title>vc</title>
@@ -43,7 +43,7 @@
                     <li class="contacts-item"><span class="span-contacts">Github:</span> <a href="https://github.com/ivan5576" class="contact-link">@ivan5576</a></li>
                     <li class="contacts-item"><span class="span-contacts">Telegram:</span> <a href="https://t.me/Ivan5576" class="contact-link">@ivan5576</a></li>
                     <li class="contacts-item"><span class="span-contacts">Discord:</span> Ivan5576#2414</li>
-                    <li class="contacts-item"><span class="span-contacts"><a href="http://www.linkedin.com/in/ivan-lebedev-7333a7264" class="contact-link">LinkedIn</a></span>
+                    <li class="contacts-item"><span class="span-contacts"><a href="http://www.linkedin.com/in/ivan-lebedev-7333a7264" class="contact-link">LinkedIn</a></span></li>
                 </ul>
             </div>
             <div class="summary summary-title" id="summary-title">
@@ -77,23 +77,23 @@
                 <h2 class="code-example-title">Code example</h2>
             </div>
             <div class="code code-example-text">
-                <code class="code-cv">
-    <pre>
-  var countBits = function(n) {
-      let reminder = '';
-      let toBinary = 0;
-      let binaryAlphabet = '01';
+                <pre>
+                    <code class="code-cv">
+var countBits = function(n) {
+    let reminder = '';
+    let toBinary = 0;
+    let binaryAlphabet = '01';
 
-      for (let i = 0; n !== 0 ; i++) {
-          reminder = n % binaryAlphabet.length;
-          n = Math.trunc(n / binaryAlphabet.length);
-          console.log(reminder);
-          toBinary = reminder + toBinary;
-      };
-      return toBinary;
-  };
-    </pre>
-                </code>
+    for (let i = 0; n !== 0 ; i++) {
+        reminder = n % binaryAlphabet.length;
+        n = Math.trunc(n / binaryAlphabet.length);
+        console.log(reminder);
+        toBinary = reminder + toBinary;
+    };
+    return toBinary;
+};
+                    </code>
+                </pre>
             </div>
             <div class="projects" id="projects-title">
                 <h2 class="projects-title">Deployed projects</h2>
